--- a/Fed_Avg.ipynb
+++ b/Fed_Avg.ipynb
@@ -92,7 +92,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -140,7 +140,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "ename": "KeyboardInterrupt",
@@ -183,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -192,48 +194,139 @@
      "text": [
       "Start nWorkers=5, beta=0, method=trimmedMean\n",
       "batch: 0, error: 0.875 \n",
-      "batch: 100, error: 0.18500000000000005 \n",
-      "batch: 200, error: 0.125 \n",
+      "batch: 100, error: 0.11499999999999999 \n",
+      "batch: 200, error: 0.08499999999999996 \n",
       "done\n",
       "Start nWorkers=5, beta=0, method=median\n",
-      "batch: 0, error: 0.92 \n",
-      "batch: 100, error: 0.18000000000000005 \n",
-      "batch: 200, error: 0.09499999999999997 \n",
+      "batch: 0, error: 0.9299999999999999 \n",
+      "batch: 100, error: 0.125 \n",
+      "batch: 200, error: 0.10999999999999999 \n",
+      "done\n",
+      "Start nWorkers=5, beta=0.1, method=trimmedMean\n",
+      "batch: 0, error: 0.875 \n",
+      "batch: 100, error: 0.16000000000000003 \n",
+      "batch: 200, error: 0.10999999999999999 \n",
+      "done\n",
+      "Start nWorkers=5, beta=0.1, method=median\n",
+      "batch: 0, error: 0.91 \n",
+      "batch: 100, error: 0.18500000000000005 \n",
+      "batch: 200, error: 0.10499999999999998 \n",
       "done\n",
       "Start nWorkers=10, beta=0, method=trimmedMean\n",
-      "batch: 0, error: 0.925 \n",
-      "batch: 100, error: 0.11499999999999999 \n",
-      "batch: 200, error: 0.08999999999999997 \n",
+      "batch: 0, error: 0.9 \n",
+      "batch: 100, error: 0.13 \n",
+      "batch: 200, error: 0.15500000000000003 \n",
       "done\n",
       "Start nWorkers=10, beta=0, method=median\n",
-      "batch: 0, error: 0.865 \n",
-      "batch: 100, error: 0.10499999999999998 \n",
-      "batch: 200, error: 0.08499999999999996 \n",
+      "batch: 0, error: 0.79 \n",
+      "batch: 100, error: 0.16500000000000004 \n",
+      "batch: 200, error: 0.18500000000000005 \n",
       "done\n",
       "Start nWorkers=10, beta=0.1, method=trimmedMean\n",
-      "batch: 0, error: 0.905 \n",
-      "batch: 100, error: 0.09999999999999998 \n",
-      "batch: 200, error: 0.07999999999999996 \n",
+      "batch: 0, error: 0.865 \n",
+      "batch: 100, error: 0.17000000000000004 \n",
+      "batch: 200, error: 0.07499999999999996 \n",
       "done\n",
       "Start nWorkers=10, beta=0.1, method=median\n",
-      "batch: 0, error: 0.925 \n",
-      "batch: 100, error: 0.16500000000000004 \n",
-      "batch: 200, error: 0.08499999999999996 \n",
+      "batch: 0, error: 0.9299999999999999 \n",
+      "batch: 100, error: 0.20999999999999996 \n",
+      "batch: 200, error: 0.20499999999999996 \n",
+      "done\n",
+      "Start nWorkers=10, beta=0.2, method=trimmedMean\n",
+      "batch: 0, error: 0.845 \n",
+      "batch: 100, error: 0.17500000000000004 \n",
+      "batch: 200, error: 0.135 \n",
+      "done\n",
+      "Start nWorkers=10, beta=0.2, method=median\n",
+      "batch: 0, error: 0.865 \n",
+      "batch: 100, error: 0.17500000000000004 \n",
+      "batch: 200, error: 0.09999999999999998 \n",
       "done\n",
       "Start nWorkers=20, beta=0, method=trimmedMean\n",
-      "batch: 0, error: 0.875 \n",
-      "batch: 100, error: 0.13 \n",
-      "batch: 200, error: 0.07999999999999996 \n",
+      "batch: 0, error: 0.87 \n",
+      "batch: 100, error: 0.10499999999999998 \n",
+      "batch: 200, error: 0.09499999999999997 \n",
       "done\n",
       "Start nWorkers=20, beta=0, method=median\n",
-      "batch: 0, error: 0.9 \n",
-      "batch: 100, error: 0.11499999999999999 \n",
-      "batch: 200, error: 0.06999999999999995 \n"
+      "batch: 0, error: 0.935 \n",
+      "batch: 100, error: 0.15500000000000003 \n",
+      "batch: 200, error: 0.09999999999999998 \n",
+      "done\n",
+      "Start nWorkers=20, beta=0.05, method=trimmedMean\n",
+      "batch: 0, error: 0.94 \n",
+      "batch: 100, error: 0.14 \n",
+      "batch: 200, error: 0.06999999999999995 \n",
+      "done\n",
+      "Start nWorkers=20, beta=0.05, method=median\n",
+      "batch: 0, error: 0.88 \n",
+      "batch: 100, error: 0.15000000000000002 \n",
+      "batch: 200, error: 0.08999999999999997 \n",
+      "done\n",
+      "Start nWorkers=20, beta=0.1, method=trimmedMean\n",
+      "batch: 0, error: 0.875 \n",
+      "batch: 100, error: 0.14 \n",
+      "batch: 200, error: 0.12 \n",
+      "done\n",
+      "Start nWorkers=20, beta=0.1, method=median\n",
+      "batch: 0, error: 0.8049999999999999 \n",
+      "batch: 100, error: 0.20999999999999996 \n",
+      "batch: 200, error: 0.06999999999999995 \n",
+      "done\n",
+      "Start nWorkers=20, beta=0.2, method=trimmedMean\n",
+      "batch: 0, error: 0.895 \n",
+      "batch: 100, error: 0.19999999999999996 \n",
+      "batch: 200, error: 0.19999999999999996 \n",
+      "done\n",
+      "Start nWorkers=20, beta=0.2, method=median\n",
+      "batch: 0, error: 0.935 \n",
+      "batch: 100, error: 0.20499999999999996 \n",
+      "batch: 200, error: 0.18999999999999995 \n",
+      "done\n",
+      "Start nWorkers=25, beta=0, method=trimmedMean\n",
+      "batch: 0, error: 0.925 \n",
+      "batch: 100, error: 0.08999999999999997 \n",
+      "batch: 200, error: 0.05500000000000005 \n",
+      "done\n",
+      "Start nWorkers=25, beta=0, method=median\n",
+      "batch: 0, error: 0.815 \n",
+      "batch: 100, error: 0.19499999999999995 \n",
+      "batch: 200, error: 0.08499999999999996 \n",
+      "done\n",
+      "Start nWorkers=25, beta=0.05, method=trimmedMean\n",
+      "batch: 0, error: 0.88 \n",
+      "batch: 100, error: 0.14500000000000002 \n",
+      "batch: 200, error: 0.13 \n",
+      "done\n",
+      "Start nWorkers=25, beta=0.05, method=median\n",
+      "batch: 0, error: 0.875 \n",
+      "batch: 100, error: 0.13 \n",
+      "batch: 200, error: 0.13 \n",
+      "done\n",
+      "Start nWorkers=25, beta=0.1, method=trimmedMean\n",
+      "batch: 0, error: 0.865 \n",
+      "batch: 100, error: 0.18000000000000005 \n",
+      "batch: 200, error: 0.10999999999999999 \n",
+      "done\n",
+      "Start nWorkers=25, beta=0.1, method=median\n",
+      "batch: 0, error: 0.905 \n",
+      "batch: 100, error: 0.09999999999999998 \n",
+      "batch: 200, error: 0.08499999999999996 \n",
+      "done\n",
+      "Start nWorkers=25, beta=0.2, method=trimmedMean\n",
+      "batch: 0, error: 0.88 \n",
+      "batch: 100, error: 0.14500000000000002 \n",
+      "batch: 200, error: 0.08999999999999997 \n",
+      "done\n",
+      "Start nWorkers=25, beta=0.2, method=median\n",
+      "batch: 0, error: 0.915 \n",
+      "batch: 100, error: 0.135 \n",
+      "batch: 200, error: 0.09999999999999998 \n",
+      "done\n"
      ]
     }
    ],
    "source": [
-    "corruptRate = {5:[0], 10: [0,.1], 20: [0,.05,.1,.2], 25:[0,.05,.1,.2]}\n",
+    "corruptRate = {5:[0,.1], 10: [0,.1,.2], 20: [0,.05,.1,.2], 25:[0,.05,.1,.2]}\n",
     "methods = ['trimmedMean','median']\n",
     "workerResB = {}\n",
     "for numWorkers in [5,10,20,25]:\n",
@@ -250,7 +343,98 @@
     "            workerResB[numWorkers][(m,int(numWorkers*beta))] = {'training':err,'FinaltestError':testError,'numWorkers':numWorkers}\n",
     "            #print('Finished nWorkers={}, corruptRate={}, method={}'.format(numWorkers,beta,m))\n",
     "            print('done')\n",
-    "with open('data/ByzantineResults.pkl','wb') as fi:\n",
+    "with open('data/ByzantineResults_withDifferentCrit.pkl','wb') as fi:\n",
+    "    pk.dump(workerResB,fi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start nWorkers=5, beta=0.1, method=trimmedMean\n",
+      "batch: 0, error: 0.935 \n",
+      "batch: 100, error: 0.18500000000000005 \n",
+      "batch: 200, error: 0.11499999999999999 \n",
+      "done\n",
+      "Start nWorkers=5, beta=0.1, method=median\n",
+      "batch: 0, error: 0.86 \n",
+      "batch: 100, error: 0.17500000000000004 \n",
+      "batch: 200, error: 0.10499999999999998 \n",
+      "done\n",
+      "Start nWorkers=10, beta=0.1, method=trimmedMean\n",
+      "batch: 0, error: 0.9 \n",
+      "batch: 100, error: 0.13 \n",
+      "batch: 200, error: 0.18999999999999995 \n",
+      "done\n",
+      "Start nWorkers=10, beta=0.1, method=median\n",
+      "batch: 0, error: 0.8200000000000001 \n",
+      "batch: 100, error: 0.20499999999999996 \n",
+      "batch: 200, error: 0.11499999999999999 \n",
+      "done\n",
+      "Start nWorkers=10, beta=0.2, method=trimmedMean\n",
+      "batch: 0, error: 0.905 \n",
+      "batch: 100, error: 0.18000000000000005 \n",
+      "batch: 200, error: 0.19999999999999996 \n",
+      "done\n",
+      "Start nWorkers=10, beta=0.2, method=median\n",
+      "batch: 0, error: 0.89 \n",
+      "batch: 100, error: 0.08999999999999997 \n",
+      "batch: 200, error: 0.125 \n",
+      "done\n",
+      "Start nWorkers=20, beta=0.05, method=trimmedMean\n",
+      "batch: 0, error: 0.83 \n",
+      "batch: 100, error: 0.12 \n",
+      "batch: 200, error: 0.10999999999999999 \n",
+      "done\n",
+      "Start nWorkers=20, beta=0.05, method=median\n",
+      "batch: 0, error: 0.765 \n",
+      "batch: 100, error: 0.13 \n",
+      "batch: 200, error: 0.07999999999999996 \n",
+      "done\n",
+      "Start nWorkers=20, beta=0.1, method=trimmedMean\n",
+      "batch: 0, error: 0.89 \n",
+      "batch: 100, error: 0.12 \n",
+      "batch: 200, error: 0.10999999999999999 \n",
+      "done\n",
+      "Start nWorkers=20, beta=0.1, method=median\n",
+      "batch: 0, error: 0.75 \n",
+      "batch: 100, error: 0.11499999999999999 \n",
+      "batch: 200, error: 0.15000000000000002 \n",
+      "done\n",
+      "Start nWorkers=20, beta=0.2, method=trimmedMean\n",
+      "batch: 0, error: 0.935 \n",
+      "batch: 100, error: 0.10999999999999999 \n",
+      "batch: 200, error: 0.18999999999999995 \n",
+      "done\n",
+      "Start nWorkers=20, beta=0.2, method=median\n",
+      "batch: 0, error: 0.865 \n"
+     ]
+    }
+   ],
+   "source": [
+    "corruptRate = {5:[.1], 10: [.1,.2], 20: [.05,.1,.2], 25:[.05,.1,.2]}\n",
+    "methods = ['trimmedMean','median']\n",
+    "workerResB = {}\n",
+    "for numWorkers in [5,10,20,25]:\n",
+    "    workerResB[numWorkers] = {}\n",
+    "    for beta in corruptRate[numWorkers]:\n",
+    "        for m in methods:\n",
+    "            print(\"Start nWorkers={}, beta={}, method={}\".format(numWorkers,beta,m))\n",
+    "            splitFeatures = np.split(trainFeatures,numWorkers)\n",
+    "            splitLabels = np.split(trainLabels,numWorkers)\n",
+    "            if not beta==0:\n",
+    "                splitLabels = corruptData(splitLabels,beta)\n",
+    "            model,err = multiDescend(splitFeatures,splitLabels,session,testFeatures,testLabels,numWorkers=numWorkers,batchMax=300,method=m,beta=0)\n",
+    "            testError = getTestError(model,testFeatures,testLabels)\n",
+    "            workerResB[numWorkers][(m,int(numWorkers*beta))] = {'training':err,'FinaltestError':testError,'numWorkers':numWorkers}\n",
+    "            #print('Finished nWorkers={}, corruptRate={}, method={}'.format(numWorkers,beta,m))\n",
+    "            print('done')\n",
+    "with open('data/ByzantineResults_ALL_BETA=0.pkl','wb') as fi:\n",
     "    pk.dump(workerResB,fi)"
    ]
   },
@@ -267,7 +451,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -486,7 +672,7 @@
     }
    ],
    "source": [
-    "res"
+    "res\n"
    ]
   },
   {
