--- a/Fed_Avg.ipynb
+++ b/Fed_Avg.ipynb
@@ -349,8 +349,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -412,7 +414,40 @@
       "batch: 200, error: 0.18999999999999995 \n",
       "done\n",
       "Start nWorkers=20, beta=0.2, method=median\n",
-      "batch: 0, error: 0.865 \n"
+      "batch: 0, error: 0.865 \n",
+      "batch: 100, error: 0.09999999999999998 \n",
+      "batch: 200, error: 0.12 \n",
+      "done\n",
+      "Start nWorkers=25, beta=0.05, method=trimmedMean\n",
+      "batch: 0, error: 0.87 \n",
+      "batch: 100, error: 0.14 \n",
+      "batch: 200, error: 0.05500000000000005 \n",
+      "done\n",
+      "Start nWorkers=25, beta=0.05, method=median\n",
+      "batch: 0, error: 0.875 \n",
+      "batch: 100, error: 0.18500000000000005 \n",
+      "batch: 200, error: 0.07999999999999996 \n",
+      "done\n",
+      "Start nWorkers=25, beta=0.1, method=trimmedMean\n",
+      "batch: 0, error: 0.885 \n",
+      "batch: 100, error: 0.11499999999999999 \n",
+      "batch: 200, error: 0.125 \n",
+      "done\n",
+      "Start nWorkers=25, beta=0.1, method=median\n",
+      "batch: 0, error: 0.84 \n",
+      "batch: 100, error: 0.15000000000000002 \n",
+      "batch: 200, error: 0.10499999999999998 \n",
+      "done\n",
+      "Start nWorkers=25, beta=0.2, method=trimmedMean\n",
+      "batch: 0, error: 0.965 \n",
+      "batch: 100, error: 0.135 \n",
+      "batch: 200, error: 0.16000000000000003 \n",
+      "done\n",
+      "Start nWorkers=25, beta=0.2, method=median\n",
+      "batch: 0, error: 0.88 \n",
+      "batch: 100, error: 0.09999999999999998 \n",
+      "batch: 200, error: 0.10999999999999999 \n",
+      "done\n"
      ]
     }
    ],
